--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#" target="_blank">Muhammad Faizan Ur Rehman</a>.
+      >Coded by <a href="#" target="_blank">Muhammad Faizan Ur Rehman</a>
     </footer>
   </body>
 </html>
